(xid) potentially correct binary ids

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 option(LIBXID_ENABLE_COVERAGE "Enable code coverage" OFF)
 option(LIBXID_ENABLE_TESTING "Enable testing" OFF)
 
+include(cmake/dependencies.cmake)
+
 if (LIBXID_ENABLE_TESTING)
 	enable_testing()
 endif()
