(xid) id data struct

--- a/lib/xid/CMakeLists.txt
+++ b/lib/xid/CMakeLists.txt
@@ -1,4 +1,7 @@
 add_library(xid
+	exceptions.h
+	id.cpp
+	id.h
 	xid.cpp
 	xid.h
 )
@@ -6,4 +9,29 @@ add_library(xid
 target_link_libraries(xid
 	PRIVATE OpenSSL::Crypto
 )
+
+# tests
+if (LIBXID_ENABLE_TESTING)
+	add_executable(xid_tests
+		id_test.cpp
+	)
+
+	target_link_libraries(xid_tests
+		PRIVATE xid
+		PRIVATE gtest_main
+	)
+
+	if (LIBXID_ENABLE_COVERAGE)
+		target_compile_options(xid_tests
+			PRIVATE --coverage
+		)
+
+		target_link_options(xid_tests
+			PRIVATE -fprofile-arcs
+		)
+	endif()
+
+	include(GoogleTest)
+	gtest_discover_tests(xid_tests)
+endif()
 
