--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Configure CMake
-        run: cmake -B .build -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=Release -DLIBXID_ENABLE_TESTING=ON
+        run: |
+          if [ "$RUNNER_OS" = "macOS" ]; then
+            cmake -B .build -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=Release -DLIBXID_ENABLE_TESTING=ON -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl
+          else
+            cmake -B .build -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=Release -DLIBXID_ENABLE_TESTING=ON
+          fi
       - name: Build
         run: |
           cmake --build .build --config Release
